# hitomi-downloader

.github/workflows/: Publish.yml
src/: bindings.ts
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  download_manager.rs
src-tauri/src/types/: comic_info.rs
src/components/: SettingsDialog.vue
src/locales/: en-US.json  zh-CN.json
