[package]
name = "hitomi-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hitomi_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }

specta = { version = "=2.0.0-rc.20", features = ["serde_json"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = { version = "=0.0.7" }

reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "system-proxy"] }
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.2" }

anyhow = { version = "1.0.98" }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = { version = "0.2.3" }
notify = { version = "8.0.0" }
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.41" }
regex-lite = { version = "0.1.6" }
futures = { version = "0.3.31" }
byteorder = { version = "1.5.0" }
sha2 = { version = "0.10.9" }
indexmap = { version = "2.9.0" }
strfmt = { version = "0.2.4" }
bytes = { version = "1.10.1" }
lopdf = { git = "https://github.com/lanyeeee/lopdf", features = ["embed_image_webp"] }
uuid = { version = "1.16.0", features = ["v4"] }
image = { version = "0.25.6", features = ["webp"], default-features = false }
zip = { version = "4.0.0", default-features = false }
walkdir = { version = "2.5.0" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
